# pgpemu

./: README.md
case/: ESP32-WROOM32 Case USB-only.stl  LICENSE  Strain Relief Adapter for ESP32-WROOM32 Case USB-only v1.stl
pgpemu-esp32/: .gitignore  CMakeLists.txt  LICENSE  Makefile.test  README.md  sdkconfig  sdkconfig.defaults  secrets.example.yaml
pgpemu-esp32/main/: CMakeLists.txt  battery.c  battery.h  button_input.c  button_input.h  config_secrets.c  config_secrets.h  config_storage.c  config_storage.h  led_output.c  led_output.h  log_tags.c  log_tags.h  nvs_helper.c  nvs_helper.h  pgp-cert.c  pgp_autobutton.c  pgp_autobutton.h  pgp_bluetooth.c  pgp_bluetooth.h  pgp_cert.c  pgp_cert.h  pgp_gap.c  pgp_gap.h  pgp_gatts.c  pgp_gatts.h  pgp_gatts_debug.c  pgp_gatts_debug.h  pgp_handshake.c  pgp_handshake.h  pgp_handshake_multi.c  pgp_handshake_multi.h  pgp_led_handler.c  pgp_led_handler.h  pgpemu.c  pgpemu.cpp  pgpemu.h  powerbank.c  powerbank.h  secrets.c  (+9 more)
pgpemu-esp32/main/pc/: aes.c  aes.h  cert-test.c
secrets/: LICENSE  pyproject.toml  secrets_upload.py
